src/test/ARM/invalid/arm/weirdlabel.deca
// Description:
//    test de prints de chaîne invalide
//   
// Résultats:
//    
//
// Historique:
//    cree le 24/01/2022

{
    println("n++/*é");
}